--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <script src="scripts/upgrades.js"></script>
     <script src="scripts/workers.js"></script>
     <script src="scripts/food.js"></script>
+    <script src="scripts/purchased.js"></script>
+
     
     <script>
         function capitalize(str) {
