--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/workers.css">
     <link rel="stylesheet" href="styles/upgrades.css">
     <link rel="stylesheet" href="styles/food.css">    
+    <link rel="stylesheet" href="styles/purchased.css">    
 </head>
 <body>
     <div class="grid-header" id="balance">💰 Balance: ₹0</div>
@@ -19,29 +20,28 @@
                 <div class="material-grid" id="materialGrid"></div>
             </div>
             <div class="grid-container">
-                <div class="grid-header" id="workers">👷 Workers: 5</div>
+                <div class="grid-header" id="workers">👷 0</div>
                 <button id="hireWorkerBtn" class="hire-btn" onclick="hireWorker()" disabled>
-                    Hire Worker (₹1000)</button>
+                    ₹1000</button>
             </div>
         </div>
         <div class="section">
             <!-- Center Section: Buildings -->
             <div class="grid-container">
                 <div class="grid-header">Buildings</div>
-                <div class="building-grid"></div>
+                <div class="building-grid" id="buildingGrid"></div>
             </div>
             <div class="grid-container">
                 <div class="grid-header">Purchased Buildings</div>
                 <div class="purchased-grid" id="purchasedGrid"></div>
             </div>    
         </div>
-        <div class="section">
-            <div class="grid-container">
-                <div class="grid-header">Upgrades</div>
-                <div class="upgrade-grid" id="upgradeGrid"></div>
-            </div>
-        </div>
     </div>
+
+
+    <div class="floating-button" id="floatBtn">⬆</div>
+    <div class="menu" id="menu"></div>
+
     <script src="scripts/main.js"></script>
     <script src="scripts/resources.js"></script>
     <script src="scripts/buildings.js"></script>
